Tests about Movement and Pieces from Game.